# chardata

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  LICENSE  MANUAL.md  README.md  SECURITY-FOLLOWUPS.md  package-lock.json  package.json  server.js
.github/workflows/: deploy.yml  plotly-hash-check.yml
gamut-wasm/: CMakeLists.txt  gamut-wrapper.cpp
hooks/: pre-commit
public/: gamut.js  help.html  index.html
public/standard-data/: APTEC_CMYKOGV_Coated_LinearCTV_2025_M1.txt  APTEC_Flexo_Coated_LinearCTV_2025-M1.txt  APTEC_Flexo_Label_LinearCTV_2025-M1.txt  APTEC_Flexo_PVC_LinearCTV_2025-M1.txt  APTEC_Offset_Coated_LinearCTV_2025-M1.txt  APTEC_Offset_Uncoated_LinearCTV_2025-M1.txt  APTEC_PC10_CardBoard_2023_v1.txt  EUROSB104.txt  EUROSB104L.txt  EUROSB204.txt  EUROSB204L.txt  FOGRA27L.txt  FOGRA28L.txt  FOGRA29L.txt  FOGRA30L.txt  FOGRA31L.txt  FOGRA32L.txt  FOGRA33L.txt  FOGRA34L.txt  FOGRA35L.txt  FOGRA36L.txt  FOGRA37L.txt  FOGRA38L.txt  FOGRA39.txt  FOGRA39L.txt  FOGRA40.txt  FOGRA40L.txt  FOGRA41.txt  FOGRA41L.txt  FOGRA42.txt  FOGRA42L.txt  FOGRA43.txt  FOGRA43L.txt  FOGRA44.txt  FOGRA44L.txt  FOGRA45.txt  FOGRA45L.txt  FOGRA46.txt  FOGRA46L.txt  FOGRA47L.txt  (+18 more)
public/wasm/: chardata-gamut.mjs  compwas-gamut.mjs  compwas-gamut.wasm
scripts/: build-wasm.sh  check-translations.js  export-translations.js  generate-help.js
translation-notes/: Eng-Pt-BM.xlsx  Eng-Zh_BP.xlsx  Eng-Zh_BP2.xlsx
translations/: Eng-De.xlsx  Eng-Es.xlsx  Eng-Fr.xlsx  Eng-It.xlsx  Eng-Ja.xlsx  Eng-Ko.xlsx  Eng-Pt.xlsx  Eng-Sv.xlsx  Eng-Zh.xlsx  Eng-Zh_BP.xlsx  Eng-Zh_BP2.xlsx
